corrected data preprocess code